--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <head>
         <meta charset="UTF-8">
         <title>Привет)))</title>
+		<link rel="stylesheet" type="text/css" href="styles.css">
+		
     </head>
 
     <body>
+   <header>
+
+	<div class="header-center">
+		<ul>
+			<style>
+				.b0{
+					color:#ffffff;
+			</style>
+
+			<a href><span class="b0">Home</span></a>
+			<a href><span class="b0"><span class="b0"><span class="b0">About</span></a>
+			<a href><span class="b0"><span class="b0">Contacts</span></a>
+			<a href><span class="b0">Docs</span></a>
+		
+		</ul>
+	</div>
+	
+</header>
         <h1>Привет)))</h1>
     		<p></p>
     		<button>Нажми меня!</button>
+    		<div id="footer">
+   made by Rick, 2020 &copy; 
 
+</body>
 </html>
